force-app/main/default/objects/Driver_Assignment__c/Driver_Assignment__c.object-meta.xml
<CustomObject>
    <label>Driver Assignment</label>
    <nameField>
        <displayFormat>DA-{0000000000}</displayFormat>
        <label>Driver Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Driver Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>