force-app/main/default/objects/Driver_Assignment__c/fields/Assignments_from_Transport_Jobs_I_Own__c.field-meta.xml
<CustomField>
    <fullName>Assignments_from_Transport_Jobs_I_Own__c</fullName>
    <formula>$User.Id =  Transport_Job__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assignments from Transport Jobs I Own</label>
    <type>Checkbox</type>
</CustomField>