force-app/main/default/objects/Driver_Assignment__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>20 JUN 2023: Previous name is Configuration</description>
    <label>Contract Job Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contract_Item__c.Item_Name__r.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contract_Item__c</referenceTo>
    <relationshipLabel>Driver Assignments</relationshipLabel>
    <relationshipName>Driver_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>