force-app/main/default/objects/Driver_Assignment__c/fields/Configuration_Name__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Name__c</fullName>
    <description>20 JUN 2023: Previous name is Configuration Name</description>
    <formula>Configuration__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Job Item Name</label>
    <type>Text</type>
</CustomField>