force-app/main/default/objects/Driver_Assignment__c/fields/Configuration_pklist__c.field-meta.xml
<CustomField>
    <fullName>Configuration_pklist__c</fullName>
    <label>Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primemover</fullName>
            </value>
            <value>
                <fullName>Primemover + Dolly</fullName>
            </value>
            <value>
                <fullName>Flat Top Single</fullName>
            </value>
            <value>
                <fullName>Flat Top B Double</fullName>
            </value>
            <value>
                <fullName>Flat Top Double</fullName>
            </value>
            <value>
                <fullName>Flat Top AB Triple</fullName>
            </value>
            <value>
                <fullName>Flat Top Triple</fullName>
            </value>
            <value>
                <fullName>Bed Truck</fullName>
            </value>
            <value>
                <fullName>Bed Truck + 1 Trailer</fullName>
            </value>
            <value>
                <fullName>Bed Truck + B Double</fullName>
            </value>
            <value>
                <fullName>Bed Truck + 2 Trailers</fullName>
            </value>
            <value>
                <fullName>Water Tanker Single</fullName>
            </value>
            <value>
                <fullName>Water Tanker B Double</fullName>
            </value>
            <value>
                <fullName>Water Tanker Double</fullName>
            </value>
            <value>
                <fullName>Water Tanker AB Triple</fullName>
            </value>
            <value>
                <fullName>Water Tanker Triple</fullName>
            </value>
            <value>
                <fullName>Fuel Tanker Single</fullName>
            </value>
            <value>
                <fullName>Fuel Tanker B Double</fullName>
            </value>
            <value>
                <fullName>Fuel Tanker Double</fullName>
            </value>
            <value>
                <fullName>Fuel Tanker AB Triple</fullName>
            </value>
            <value>
                <fullName>Fuel Tanker Triple</fullName>
            </value>
            <value>
                <fullName>Quad Float</fullName>
            </value>
            <value>
                <fullName>Quad Float + Dolly</fullName>
            </value>
            <value>
                <fullName>Vac Truck</fullName>
            </value>
            <value>
                <fullName>Cattle Crate Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>