force-app/main/default/objects/Driver_Assignment__c/fields/Daily_Pre_start_Required__c.field-meta.xml
<CustomField>
    <fullName>Daily_Pre_start_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Daily Pre-start Required</label>
    <type>Checkbox</type>
</CustomField>