force-app/main/default/objects/Driver_Assignment__c/fields/Daily_Site_Job__c.field-meta.xml
<CustomField>
    <fullName>Daily_Site_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Site Job</label>
    <referenceTo>Daily_Report__c</referenceTo>
    <relationshipLabel>Driver Assignments</relationshipLabel>
    <relationshipName>Driver_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>