force-app/main/default/objects/Driver_Assignment__c/fields/Daily_Work_Diary__c.field-meta.xml
<CustomField>
    <fullName>Daily_Work_Diary__c</fullName>
    <label>Daily Work Diary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>