force-app/main/default/objects/Driver_Assignment__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Driver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Driver Assignments</relationshipLabel>
    <relationshipName>Driver_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>