force-app/main/default/objects/Driver_Assignment__c/fields/Driver_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Driver_Assignment_Date__c</fullName>
    <label>Driver Assignment Date</label>
    <type>Date</type>
</CustomField>