force-app/main/default/objects/Driver_Assignment__c/fields/Driver_Assignment_URL__c.field-meta.xml
<CustomField>
    <fullName>Driver_Assignment_URL__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+ Id ,  Name , &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver Assignment URL</label>
    <type>Text</type>
</CustomField>