force-app/main/default/objects/Driver_Assignment__c/fields/Driver_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Driver_Contact_Number__c</fullName>
    <formula>Driver__r.Mobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver Contact Number</label>
    <type>Text</type>
</CustomField>