force-app/main/default/objects/Driver_Assignment__c/fields/Driver_formula__c.field-meta.xml
<CustomField>
    <fullName>Driver_formula__c</fullName>
    <formula>Driver__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver</label>
    <type>Text</type>
</CustomField>