force-app/main/default/objects/Driver_Assignment__c/fields/Estimated_total_job_time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_total_job_time__c</fullName>
    <label>Estimated total job time</label>
    <type>TextArea</type>
</CustomField>