force-app/main/default/objects/Driver_Assignment__c/fields/Fit_for_Work__c.field-meta.xml
<CustomField>
    <fullName>Fit_for_Work__c</fullName>
    <description>Please select Yes or No, to declare you are fit for work.</description>
    <label>I declare I am fit for work</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>