force-app/main/default/objects/Driver_Assignment__c/fields/Is_Driver_Assignment_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Is_Driver_Assignment_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick the checkbox if you accept the driver assignment.</inlineHelpText>
    <label>Is Driver Assignment Accepted?</label>
    <type>Checkbox</type>
</CustomField>