force-app/main/default/objects/Driver_Assignment__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <formula>TEXT( Transport_Job__r.Types__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Type</label>
    <type>Text</type>
</CustomField>