force-app/main/default/objects/Driver_Assignment__c/fields/Load_Details__c.field-meta.xml
<CustomField>
    <fullName>Load_Details__c</fullName>
    <label>Load Details</label>
    <type>TextArea</type>
</CustomField>