force-app/main/default/objects/Driver_Assignment__c/fields/Maintenance_Category__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Category__c</fullName>
    <label>Maintenance Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heavy Vehicle Maintenance</fullName>
            </value>
            <value>
                <fullName>Non- Heavy Vehicle Maintenance</fullName>
            </value>
            <value>
                <fullName>Assist at Camp</fullName>
                <isActive>false</isActive>
                <label>Assist at Camp</label>
            </value>
            <value>
                <fullName>Assist at Rig</fullName>
                <isActive>false</isActive>
                <label>Assist at Rig</label>
            </value>
            <value>
                <fullName>Assist in Stores</fullName>
                <isActive>false</isActive>
                <label>Assist in Stores</label>
            </value>
            <value>
                <fullName>Clean LV</fullName>
                <isActive>false</isActive>
                <label>Clean LV</label>
            </value>
            <value>
                <fullName>Clean Workshop</fullName>
                <isActive>false</isActive>
                <label>Clean Workshop</label>
            </value>
            <value>
                <fullName>Drive LV</fullName>
                <isActive>false</isActive>
                <label>Drive LV</label>
            </value>
            <value>
                <fullName>Empty Bins</fullName>
                <isActive>false</isActive>
                <label>Empty Bins</label>
            </value>
            <value>
                <fullName>HV Passenger</fullName>
                <isActive>false</isActive>
                <label>HV Passenger</label>
            </value>
            <value>
                <fullName>LV Repairs</fullName>
                <isActive>false</isActive>
                <label>LV Repairs</label>
            </value>
            <value>
                <fullName>Loader/Forklift Driving (unrelated to a HV)</fullName>
                <isActive>false</isActive>
                <label>Loader/Forklift Driving (unrelated to a HV)</label>
            </value>
            <value>
                <fullName>Other Non-HV task</fullName>
                <isActive>false</isActive>
                <label>Other Non-HV task</label>
            </value>
            <value>
                <fullName>Pickup/Delivery Duties (LV only)</fullName>
                <isActive>false</isActive>
                <label>Pickup/Delivery Duties (LV only)</label>
            </value>
            <value>
                <fullName>Training</fullName>
                <isActive>false</isActive>
                <label>Training</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>