force-app/main/default/objects/Driver_Assignment__c/fields/Message_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Message_Confirmation__c</fullName>
    <formula>&apos;By clicking the Save button, you are confirming that you read the latest SMS message. Notification will be sent to Transport Manager.&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Message Confirmation</label>
    <type>Text</type>
</CustomField>