force-app/main/default/objects/Driver_Assignment__c/fields/Minimum_7hrs_of_continuous_rest__c.field-meta.xml
<CustomField>
    <fullName>Minimum_7hrs_of_continuous_rest__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The driver has had the minimum 7hrs of continuous rest.</inlineHelpText>
    <label>Minimum 7hrs of continuous rest</label>
    <type>Checkbox</type>
</CustomField>