force-app/main/default/objects/Driver_Assignment__c/fields/No_of_Assets_Assigned__c.field-meta.xml
<CustomField>
    <fullName>No_of_Assets_Assigned__c</fullName>
    <label>No. of Assets Assigned</label>
    <summaryForeignKey>Asset_Driver_Assignment__c.Driver_Assignment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>