force-app/main/default/objects/Driver_Assignment__c/fields/No_of_Assets_with_no_Pre_Starts__c.field-meta.xml
<CustomField>
    <fullName>No_of_Assets_with_no_Pre_Starts__c</fullName>
    <label>No. of Assets with no Pre-Starts</label>
    <summaryFilterItems>
        <field>Asset_Driver_Assignment__c.Daily_Pre_Start_for_the_Day__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Asset_Driver_Assignment__c.is_Prime_Movers__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Asset_Driver_Assignment__c.Driver_Assignment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>