force-app/main/default/objects/Driver_Assignment__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Details for the driver</description>
    <label>Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>