force-app/main/default/objects/Driver_Assignment__c/fields/Notify_Driver_of_Updates__c.field-meta.xml
<CustomField>
    <fullName>Notify_Driver_of_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Driver of Updates</label>
    <type>Checkbox</type>
</CustomField>