force-app/main/default/objects/Driver_Assignment__c/fields/Plan_provides_opportunities__c.field-meta.xml
<CustomField>
    <fullName>Plan_provides_opportunities__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The plan provides opportunities for the minimum required rest breaks.</inlineHelpText>
    <label>Plan provides opportunities</label>
    <type>Checkbox</type>
</CustomField>