force-app/main/default/objects/Driver_Assignment__c/fields/Quoted_Price_Job__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Price_Job__c</fullName>
    <description>Ticked if the Contract Job Item Service Type is Fixed Price/Hour</description>
    <formula>ISPICKVAL(  Configuration__r.Service_Type__c  , &apos;Fixed Price/Hour&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hourly Job Item</label>
    <type>Checkbox</type>
</CustomField>