force-app/main/default/objects/Driver_Assignment__c/fields/SMS_Link__c.field-meta.xml
<CustomField>
    <fullName>SMS_Link__c</fullName>
    <description>Link to the Driver Assignment</description>
    <formula>&apos;Link: http://wilddesertau.force.com/drivers/s/detail/&apos; +  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMS Link</label>
    <type>Text</type>
</CustomField>