force-app/main/default/objects/Driver_Assignment__c/fields/Sufficient_work_hours_remaining__c.field-meta.xml
<CustomField>
    <fullName>Sufficient_work_hours_remaining__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The driver has sufficient work hours remaining to comply with legal limits.</inlineHelpText>
    <label>Sufficient work hours remaining</label>
    <type>Checkbox</type>
</CustomField>