force-app/main/default/objects/Driver_Assignment__c/fields/Time_Entry_Instruction__c.field-meta.xml
<CustomField>
    <fullName>Time_Entry_Instruction__c</fullName>
    <formula>&quot;Please enter your total times with decimals. Example 1hr and 15min = 1.25 / 5hrs and 45min = 5.75&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Entry Instruction</label>
    <type>Text</type>
</CustomField>