force-app/main/default/objects/Driver_Assignment__c/fields/TJ_Description__c.field-meta.xml
<CustomField>
    <fullName>TJ_Description__c</fullName>
    <description>Transport Job Description</description>
    <formula>Transport_Job__r.TJ_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TJ Description</label>
    <type>Text</type>
</CustomField>