force-app/main/default/objects/Driver_Assignment__c/fields/TJ_Status__c.field-meta.xml
<CustomField>
    <fullName>TJ_Status__c</fullName>
    <formula>TEXT(Transport_Job__r.Status__c)</formula>
    <label>TJ Status</label>
    <type>Text</type>
</CustomField>