force-app/main/default/objects/Driver_Assignment__c/fields/TJ_Type_Regular__c.field-meta.xml
<CustomField>
    <fullName>TJ_Type_Regular__c</fullName>
    <formula>ISPICKVAL(Transport_Job__r.Types__c, &apos;Regular&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TJ Type – Regular</label>
    <type>Checkbox</type>
</CustomField>