force-app/main/default/objects/Driver_Assignment__c/fields/Total_Hrs_Start_to_End__c.field-meta.xml
<CustomField>
    <fullName>Total_Hrs_Start_to_End__c</fullName>
    <formula>TEXT(FLOOR((End_Date_Time__c - Start_Date_Time__c) * 24)) &amp; &quot; hours &quot; &amp; 
TEXT(MOD(ROUND(((End_Date_Time__c - Start_Date_Time__c) * 24 * 60), 0), 60)) &amp; &quot; minutes&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hrs Start to End</label>
    <type>Text</type>
</CustomField>