force-app/main/default/objects/Driver_Assignment__c/fields/Total_Rest_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Rest_Time__c</fullName>
    <description>Total Rest</description>
    <inlineHelpText>Enter the total hrs spent at rest for this job</inlineHelpText>
    <label>Total Rest Time</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>