force-app/main/default/objects/Driver_Assignment__c/fields/Total_Work_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Work_Time__c</fullName>
    <description>Total Work Hrs</description>
    <inlineHelpText>Enter the total hrs spent at work for this job</inlineHelpText>
    <label>Total Work Time</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>