force-app/main/default/objects/Driver_Assignment__c/fields/Transport_Base__c.field-meta.xml
<CustomField>
    <fullName>Transport_Base__c</fullName>
    <formula>Transport_Job__r.Transport_Base__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transport Base</label>
    <type>Text</type>
</CustomField>