force-app/main/default/objects/Driver_Assignment__c/fields/Transport_Daily_Report__c.field-meta.xml
<CustomField>
    <fullName>Transport_Daily_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transport Daily Report</label>
    <referenceTo>Transport_Daily_Report__c</referenceTo>
    <relationshipLabel>Driver Assignments</relationshipLabel>
    <relationshipName>Driver_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>