force-app/main/default/objects/Driver_Assignment__c/fields/Transport_Job__c.field-meta.xml
<CustomField>
    <fullName>Transport_Job__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Transport Job</label>
    <referenceTo>Transport_Job__c</referenceTo>
    <relationshipLabel>Driver Assignments</relationshipLabel>
    <relationshipName>Driver_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>