force-app/main/default/objects/Driver_Assignment__c/fields/Transport_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Transport_Job_Name__c</fullName>
    <formula>Transport_Job__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transport Job Name</label>
    <type>Text</type>
</CustomField>