force-app/main/default/objects/Driver_Assignment__c/fields/Travel_Details__c.field-meta.xml
<CustomField>
    <fullName>Travel_Details__c</fullName>
    <label>Travel Details</label>
    <type>TextArea</type>
</CustomField>