force-app/main/default/objects/Driver_Assignment__c/fields/Truck__c.field-meta.xml
<CustomField>
    <fullName>Truck__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Assigned Truck (Prime Mover)</description>
    <inlineHelpText>Assigned Truck (Prime Mover)</inlineHelpText>
    <label>Truck</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset__c.Asset_Family__c</field>
            <operation>equals</operation>
            <value>Prime Movers</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Driver Assignments</relationshipLabel>
    <relationshipName>Driver_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>