force-app/main/default/objects/Driver_Assignment__c/fields/Within_100km_Radius__c.field-meta.xml
<CustomField>
    <fullName>Within_100km_Radius__c</fullName>
    <formula>Transport_Job__r.Within_100km_Radius__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Within 100km Radius</label>
    <type>Checkbox</type>
</CustomField>