force-app/main/default/objects/Driver_Assignment__c/fields/Work_Diary_Number__c.field-meta.xml
<CustomField>
    <fullName>Work_Diary_Number__c</fullName>
    <label>Work Diary Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>