force-app/main/default/objects/Driver_Assignment__c/fields/Work_Diary_Received__c.field-meta.xml
<CustomField>
    <fullName>Work_Diary_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work Diary Received</label>
    <type>Checkbox</type>
</CustomField>