force-app/main/default/objects/Driver_Assignment__c/validationRules/Asset_with_no_prestarts.validationRule-meta.xml
<ValidationRule>
    <fullName>Asset_with_no_prestarts</fullName>
    <active>true</active>
    <description>If there are assets with no daily prestarts, prevent in progressing.</description>
    <errorConditionFormula>AND(
 No_of_Assets_with_no_Pre_Starts__c &gt; 0,
 OR(
     NOT(ISBLANK( Start_Date_Time__c )),
     NOT(ISBLANK( End_Date_Time__c ))
 )
)</errorConditionFormula>
    <errorMessage>Cannot proceed. There are assets with no daily pre-starts.</errorMessage>
</ValidationRule>