force-app/main/default/objects/Driver_Assignment__c/validationRules/Changing_Start_Time_Work_Diary_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Changing_Start_Time_Work_Diary_Required</fullName>
    <active>true</active>
    <description>If greater than 100km radius, Work Diary Number should have value</description>
    <errorConditionFormula>AND
( ISCHANGED (Start_Date_Time__c), NOT(ISBLANK( Start_Date_Time__c )),
 ISBLANK( Work_Diary_Number__c ) )</errorConditionFormula>
    <errorDisplayField>Work_Diary_Number__c</errorDisplayField>
    <errorMessage>Please enter your work diary number.</errorMessage>
</ValidationRule>