force-app/main/default/objects/Driver_Assignment__c/validationRules/CompletedDA_UpdateStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>CompletedDA_UpdateStatus</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(Driver_Status__c),
  NOT( ISPICKVAL(Driver_Status__c , &apos;Cancelled&apos;)),
  ISPICKVAL( PRIORVALUE(Driver_Status__c), &apos;Completed&apos;) 
)</errorConditionFormula>
    <errorDisplayField>Driver_Status__c</errorDisplayField>
    <errorMessage>You are not allowed to change back the status of completed Driver Assignment</errorMessage>
</ValidationRule>