force-app/main/default/objects/Driver_Assignment__c/validationRules/Decimal_in_15min_intervals_Work.validationRule-meta.xml
<ValidationRule>
    <fullName>Decimal_in_15min_intervals_Work</fullName>
    <active>false</active>
    <description>Rule to ensure that time is in15 min intervals.</description>
    <errorConditionFormula>IF(
  NOT(ISBLANK(End_Date_Time__c)),
  NOT(
    OR(
      (Total_Work_Time__c - FLOOR(Total_Work_Time__c)) = 0.00,
      (Total_Work_Time__c - FLOOR(Total_Work_Time__c)) = 0.25,
      (Total_Work_Time__c - FLOOR(Total_Work_Time__c)) = 0.50,
      (Total_Work_Time__c - FLOOR(Total_Work_Time__c)) = 0.75
    )
  ),
  FALSE
)</errorConditionFormula>
    <errorDisplayField>Total_Work_Time__c</errorDisplayField>
    <errorMessage>Please make sure your time is in 15min intervals. For example 4hrs and 15min = 4.25</errorMessage>
</ValidationRule>