force-app/main/default/objects/Driver_Assignment__c/validationRules/EndDateTime_greaterthan_StartDateTime.validationRule-meta.xml
<ValidationRule>
    <fullName>EndDateTime_greaterthan_StartDateTime</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
 ISBLANK( Start_Date_Time__c ) ,
  Start_Date_Time__c &gt; End_Date_Time__c
),
NOT(ISBLANK( End_Date_Time__c ))
)</errorConditionFormula>
    <errorDisplayField>End_Date_Time__c</errorDisplayField>
    <errorMessage>Start Date/Time should have value or less than End Date/Time</errorMessage>
</ValidationRule>