force-app/main/default/objects/Driver_Assignment__c/validationRules/ForAssigned_Billable_ContractJobItemRequ.validationRule-meta.xml
<ValidationRule>
    <fullName>ForAssigned_Billable_ContractJobItemRequ</fullName>
    <active>true</active>
    <description>The Contract Job Item field is required if billable before moving to Assigned</description>
    <errorConditionFormula>AND(
    ISCHANGED( Driver_Status__c ),
    ISPICKVAL(Driver_Status__c, &apos;Assigned&apos;),
    ISBLANK( Configuration__c ),
    Transport_Job__r.Billable__c   
)</errorConditionFormula>
    <errorMessage>If Billable, the Contract Job Item field is required before moving to Assigned.</errorMessage>
</ValidationRule>