force-app/main/default/objects/Driver_Assignment__c/validationRules/ForAssigned_ConfigurationRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>ForAssigned_ConfigurationRequired</fullName>
    <active>true</active>
    <description>The Configuration field is required before moving to Assigned.</description>
    <errorConditionFormula>AND(
    ISCHANGED( Driver_Status__c ),
    ISPICKVAL(Driver_Status__c, &apos;Assigned&apos;),
    ISBLANK(TEXT(  Configuration_pklist__c  ))
)</errorConditionFormula>
    <errorMessage>The Configuration field is required before moving to Assigned.</errorMessage>
</ValidationRule>