force-app/main/default/objects/Driver_Assignment__c/validationRules/MaintenanceCategory_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>MaintenanceCategory_Required</fullName>
    <active>false</active>
    <description>Maintenance category is required for maintenance job.</description>
    <errorConditionFormula>AND(
   ISPICKVAL(Transport_Job__r.Types__c, &apos;Maintenance&apos;),
   ISBLANK(TEXT( Maintenance_Category__c )) 
)</errorConditionFormula>
    <errorDisplayField>Maintenance_Category__c</errorDisplayField>
    <errorMessage>Maintenance category is required for maintenance job.</errorMessage>
</ValidationRule>