force-app/main/default/objects/Driver_Assignment__c/validationRules/StartDateTime_NotAccepted.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDateTime_NotAccepted</fullName>
    <active>true</active>
    <description>Prevent Start DateTime if not accepted</description>
    <errorConditionFormula>AND(
 Is_Driver_Assignment_Accepted__c = FALSE,
 NOT( ISNULL(Start_Date_Time__c ))
)</errorConditionFormula>
    <errorMessage>Accept first the Driver Assignment before starting the time.</errorMessage>
</ValidationRule>